--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
-  text-align: center;
+.top {
+  display: flex;
+  height: 50vh;
+}
+.bottom {
+  height: 50vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.editor-container {
+  flex-grow: 1;
+  flex-basis: 0;
   display: flex;
   flex-direction: column;
+  padding: 0.5rem;
+  border-bottom: 0.3px solid lightgray;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.editor-container::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.editor-container {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.expand-button {
+  color: white !important;
+}
+
+.editor-container.collapsed {
+  flex-grow: 0;
+}
+
+.editor-container.collapsed .CodeMirror-scroll {
+  position: absolute;
+  overflow: hidden !important;
+}
+
+.editor-header {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: black;
   color: white;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.CodeMirror {
+  height: 100% !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.code-mirror-wrapper {
+  flex-grow: 1;
+  overflow: hidden;
+}
+
+body {
+  background-color: #222831;
+}
+
+@media (max-width: 800px) {
+  .top {
+    display: inline-grid;
+    overflow-y: scroll;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .top::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .top {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .editor-container {
+    flex-grow: 0;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 0.3px solid lightgray;
   }
 }
